2009-04-10 00:53-EDT Gregory John Casamento <greg_casamento@yahoo.com>

	* Source/NSMenuView.m: In the method
	- (void) setWindowFrameForAttachingToRect:... changed how
	popup/pulldown buttons handle the preferred edge.
	Per Cocoa documentation, the selected cell should always show up
	over the button for popups.   For pull down menus, the preferred 
	edge is relevant.   This is also apparent from testing under Cocoa.
	
2009-04-09 22:55-EDT Gregory John Casamento <greg_casamento@yahoo.com>

	* Source/NSRulerMarker.m: Changes suggested by Doug Simons for
	allowing markers to be set on an NSMouseDown event.

2009-04-07 22:21-EDT Gregory John Casamento <greg_casamento@yahoo.com>

	* Source/NSDocumentController.m: Return default type if the
	URL is not a file URL and the call to typeFromFileExtension: returns
	nil in typeForContentsOfURL:.

2009-04-07 18:43-EDT Gregory John Casamento <greg_casamento@yahoo.com>

	* Headers/AppKit/NSSpeechSynthesizer.h: Added _module ivar.
	* Source/NSDrawer.m: Don't set the timer since it eats a lot of CPU.
	* Source/NSPasteboard.m: Retain the path since it's autoreleased.
	* Source/NSTextView.m: Set the textview to allow undos by default.

2009-04-07 Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSAlert.m (NSBeginAlertSheet, NSBeginCriticalAlertSheet,
	NSBeginInformationalAlertSheet): Correct the calling of delegate
	methods. This should fix #26101.

2009-04-07 Fred Kiefer <FredKiefer@gmx.de>

	* Headers/AppKit/NSSplitView.h
	(-maxPossiblePositionOfDividerAtIndex:,
	-minPossiblePositionOfDividerAtIndex:,
	-setPosition:ofDividerAtIndex:): New MacOSX 10.5 methods. 
	* Source/NSSplitView.m: Basic implementation of these methods. 
	* Headers/AppKit/NSSplitView.h: Add ivars, will break binary compatibility.
	* Source/NSSplitView.m (-isPaneSplitter, -setIsPaneSplitter:):
	Implement these methods.

2009-04-07 Sergii Stoian <stoyan255@gmail.com>

	* Source/NSSplitView.m (-mouseDown:): When checking if divider